--- a/login/login.html
+++ b/login/login.html
@@ -29,7 +29,7 @@
 			<div class="offcanvas-body">
 			  <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
 				<li class="nav-item">
-				  <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Inicio</a>
+				  <a class="nav-link mx-lg-2 active" aria-current="page" href="index.html">Inicio</a>
 				</li>
 				<li class="nav-item">
 				  <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Sobre nosotros</a>
@@ -40,7 +40,7 @@
 			  </ul>
 			</div>
 		  </div>
-		  <a href="ingresar.html" class="login-button">Iniciar Sesion</a>
+		  <a href="login.html" class="login-button">Iniciar Sesion</a>
 		  <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
 			aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
