--- a/quienes-somos/quienesSomos.html
+++ b/quienes-somos/quienesSomos.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre Nosotros</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link rel="stylesheet" href="/login/fonts/font.css">
 </head>
 <body>
     <div>
@@ -21,24 +25,25 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Inicio</a>
+                  <a class="nav-link mx-lg-2 active" aria-current="page" href="/index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Sobre nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Contactanos</a>
+                  <a class="nav-link mx-lg-2 active" aria-current="page" href="/Contactanos/contacto.html">Contactanos</a>
                 </li>
               </ul>
             </div>
           </div>
-          <a href="#" class="login-button">Iniciar Sesion</a>
+          <a href="/login/login.html" class="login-button">Iniciar Sesion</a>
           <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+        </nav>
       </div>
-      </nav>
+     
       <!-- cierre nav -->
       
 <section >
@@ -218,8 +223,8 @@
   
 </div>
 </section>
-<footer style="height: 50%; background-color: #00000070; ">
-  <p style="margin-bottom: 0 !important;">condiciones</p>
+<footer >
+  <h6>@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
