login y page funcionando

--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -26,7 +26,7 @@
         </button>
 
         <!-- Logo y título -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="/asset/logo.png" class="img-nav" alt="Logo">
           <span class="titulo-nav">Libreta Virtual</span>
         </a>
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="quienesSomos.html">Sobre nosotros</a>
