--- a/userHome.html
+++ b/userHome.html
@@ -19,7 +19,7 @@
   <!-- Sidebar -->
 
   <div class="barra-lateral">
-      <div>
+      <div style="margin-bottom: 10px;">
           <div class="nombre-pagina">
             <ion-icon id="school" name="school-outline"></ion-icon>
               <span>Libreta Virtual</span>
@@ -64,10 +64,10 @@
                   </a>
               </li>
               <li>
-                  <a href="#" id="btnSalir">
-                    <ion-icon  name="log-in-outline"></ion-icon>
-                      <span>Salir</span>
-                  </a>
+                <button id="btnSalir"class='btnSalir' >
+                  <ion-icon name="log-in-outline"></ion-icon>
+                  <span>Salir</span>
+              </button>
               </li>
           </ul>
       </nav>
