--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <!-- Enlaces de navegación -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
-            <li class="nav-item">
+           <!--  <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="quienesSomos.html">Sobre nosotros</a>
             </li>
