--- a/contacto.html
+++ b/contacto.html
@@ -15,6 +15,9 @@
 
 </head>
 <body>
+<!--   <script>
+    history.pushState(null, '', 'userHome.html');
+</script> -->
     
 
     <!-- Comienzo del navbar -->
