--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -14,6 +14,23 @@
 </head>
 <body>
   <div>
+<!--     <script>
+document.addEventListener('DOMContentLoaded', function() {
+    var email = localStorage.getItem('email');
+    var nombre = localStorage.getItem('nombre');
+    var apellido = localStorage.getItem('apellido');
+    var rol = localStorage.getItem('rol');
+
+    if (email && nombre && apellido && rol) {
+        // Todas las variables de sesión están presentes, redirigir a userHome.html
+        console.log('Usuario autenticado. Redirigiendo a userHome.html');
+        window.location.href = 'userHome.html';
+    } else {
+        console.log('Usuario no autenticado.');
+    }
+});
+
+  </script> -->
 
     
     <!-- Navbar -->
