--- a/userHome.html
+++ b/userHome.html
@@ -145,7 +145,7 @@
             <img src="asset/home-user/usuarios.jpg" class="img-fluid mx-auto d-block w-50" />
             <div class="card-body">
               <h4 class="text-center">Administrar usuarios</h4>
-              <a href="#" class="boton-card d-flex justify-content-center w-" >Ir a Usuarios</a>
+              <a href="user.html" class="boton-card d-flex justify-content-center w-" >Ir a Usuarios</a>
  
             </div>
           </div>
@@ -188,4 +188,5 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="/js/userHome.js"></script>
+  <script src="/js/menuLateral.js"></script>
 </html>
