--- a/user.html
+++ b/user.html
@@ -33,7 +33,7 @@
     <nav class="navegacion">
       <ul>
         <li>
-          <a href="#">
+          <a href="userHome.html">
             <ion-icon name="home-outline"></ion-icon>
             <span>Inicio</span>
           </a>
@@ -57,9 +57,9 @@
           </a>
         </li>
         <li>
-          <a href="#" id="btnRoles">
+          <a href="user.html" id="btnRoles">
             <ion-icon name="people-outline"></ion-icon>
-            <span>Roles</span>
+            <span>Usuarios</span>
           </a>
         </li>
         <li>
@@ -164,7 +164,7 @@
             <th>Apellido</th>
             <th>Nombre</th>
             <th>Email</th>
-            <th>Contraseña</th>
+            <th></th> 
             <th>Fecha Alta</th>
             <th>Fecha Baja</th>
             <th>Rol</th>
@@ -188,6 +188,6 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="/js/menuLateral.js"></script>
-<script src="js/popup.js"></script>
+
 
 </html>
