--- a/userHome.html
+++ b/userHome.html
@@ -52,9 +52,9 @@
                   </a>
               </li>
               <li>
-                  <a href="#" id="btnRoles">
+                  <a href="user.html" id="btnRoles">
                     <ion-icon name="people-outline"></ion-icon>
-                      <span>Roles</span>
+                      <span>Usuarios</span>
                   </a>
               </li>
               <li>
@@ -101,8 +101,44 @@
     <div id="space"></div>
 
 
-    <!-- Seccion de Tutor -->
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <!-- Seccion de Administrador -->
+          <div class="col" id="contenedor-admUser">
+            <div class="card h-100">
+              <img src="asset/home-user/usuarios.jpg" class="img-fluid mx-auto d-block w-50" />
+              <div class="card-body">
+                <h4 class="text-center">Administrar usuarios</h4>
+                <a href="user.html" class="boton-card d-flex justify-content-center w-" >Ir a Usuarios</a>
+   
+              </div>
+            </div>
+          </div>
+  
+          <div class="col" id="contenedor-admAlumnos">
+            <div class="card h-100">
+              <img src="asset/home-user/alumnos.avif" class="img-fluid mx-auto d-block w-50" />
+              <div class="card-body">
+                <h4 class="text-center">Administrar Alumnos</h4>
+                <a href="#" class="boton-card d-flex justify-content-center w-" >Ir a Alumnos</a>
+   
+              </div>
+            </div>
+          </div>
+
+          <div class="col" id="contenedor-notas">
+            <div class="card h-100">
+              <img src="asset/home-user/notas.jpg" class="img-fluid mx-auto d-block w-50" />
+              <div class="card-body">
+                <h4 class="text-center">Ver Todas las Notas</h4>
+                <a href="#" class="boton-card d-flex justify-content-center w-" >Ir a Notas</a>
+   
+              </div>
+            </div>
+          </div>
+
+
+<!-- Seccion de Tutor -->
+
         <div class="col" id="contenedor-asistencias">
           <div class="card h-100">
             <img src="asset/home-user/asistencia.jpg" class="img-fluid mx-auto d-block w-50"/>
@@ -128,41 +164,9 @@
         </div>
 
 
-        <!-- Seccion de Administrador -->
-        <div class="col" id="contenedor-notas">
-          <div class="card h-100">
-            <img src="asset/home-user/notas.jpg" class="img-fluid mx-auto d-block w-50" />
-            <div class="card-body">
-              <h4 class="text-center">Ver Todas las Notas</h4>
-              <a href="#" class="boton-card d-flex justify-content-center w-" >Ir a Notas</a>
- 
-            </div>
-          </div>
-        </div>
 
-        <div class="col" id="contenedor-admUser">
-          <div class="card h-100">
-            <img src="asset/home-user/usuarios.jpg" class="img-fluid mx-auto d-block w-50" />
-            <div class="card-body">
-              <h4 class="text-center">Administrar usuarios</h4>
-              <a href="user.html" class="boton-card d-flex justify-content-center w-" >Ir a Usuarios</a>
- 
-            </div>
-          </div>
-        </div>
 
-        <div class="col" id="contenedor-admAlumnos">
-          <div class="card h-100">
-            <img src="asset/home-user/alumnos.avif" class="img-fluid mx-auto d-block w-50" />
-            <div class="card-body">
-              <h4 class="text-center">Administrar Alumnos</h4>
-              <a href="#" class="boton-card d-flex justify-content-center w-" >Ir a Alumnos</a>
- 
-            </div>
-          </div>
-        </div>
-
-        <div class="col" id="contenedor-admRoles">
+     <!--    <div class="col" id="contenedor-admRoles">
           <div class="card h-100">
             <img src="asset/home-user/Roles.jpg" class="img-fluid mx-auto d-block w-50 h-100" />
             <div class="card-body">
@@ -171,7 +175,7 @@
  
             </div>
           </div>
-        </div>
+        </div> -->
 
 
 
