cambio menu lateral

--- a/login.html
+++ b/login.html
@@ -9,11 +9,18 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Login</title>
 </head>
 
 <body>
+  
     <div class="login-card">
+        <div class="back-home" id="backHome">
+            <span class="material-icons">arrow_back</span>
+        </div>
+      
+       
         <div id="loginForm">
             <h2 class="title">Inicio de sesión</h2>
             <h3 class="subtitle">Ingresa con tu cuenta</h3>
