--- a/userHome.html
+++ b/userHome.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- Sidebar -->
-  <div class="sidebar ">
+  <div class="sidebar close ">
     <div class="logo">
       <i class='bx bxs-school' ></i>
       <span class="titulo">Libreta virtual</span>
