--- a/userHome.html
+++ b/userHome.html
@@ -37,6 +37,15 @@
           <li><a class="" href="#">Inicio</a></li>
          </ul>
       </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-envelope'></i>
+          <span class="link_name">Comunicado</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="" href="#">Comunicado</a></li>
+         </ul>
+      </li>
 
       <li>
         <div class="icon_link">
@@ -105,12 +114,12 @@
        </li>
 
       <li>
-        <a href="#">
+        <a href="/user.html">
           <i class='bx bx-user-plus'></i>
           <span class="link_name">Usuarios</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="#">Usuarios</a></li>
+          <li><a class="" href="/user.html">Usuarios</a></li>
          </ul>
       </li>
 
@@ -166,33 +175,33 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <!-- Seccion de Administrador -->
       <div class="col" id="contenedor-admUser">
-        <div class="card h-100">
-          <img src="asset/home-user/usuarios.jpg" class="img-fluid mx-auto d-block w-50" />
-          <div class="card-body">
-            <h4 class="text-center">Administrar usuarios</h4>
-            <a href="user.html" class="boton-card d-flex justify-content-center w-">Ir a Usuarios</a>
+        <div class="card-small h-100">
+          <img src="asset/home-user/gestionar-user.png" />
+          <div class="contenedor-accion">
+            <span>Añade, elimina y edita usuarios fácilmente.</span>
+            <a href="user.html" class="boton-card ">Gestión de Usuarios</a>
 
           </div>
         </div>
       </div>
 
       <div class="col" id="contenedor-admAlumnos">
-        <div class="card h-100">
-          <img src="asset/home-user/alumnos.avif" class="img-fluid mx-auto d-block w-50" />
-          <div class="card-body">
-            <h4 class="text-center">Administrar Alumnos</h4>
-            <a href="#" class="boton-card d-flex justify-content-center w-">Ir a Alumnos</a>
+        <div class="card-small h-100">
+          <img src="asset/home-user/alumnos.png"  />
+          <div class="contenedor-accion">
+          <span>Consulta información, estado y curso. Modifica datos fácilmente.</span>
+            <a href="#" class="boton-card ">Gestión de Estudiantes</a>
 
           </div>
         </div>
       </div>
 
       <div class="col" id="contenedor-notas">
-        <div class="card h-100">
-          <img src="asset/home-user/notas.jpg" class="img-fluid mx-auto d-block w-50" />
-          <div class="card-body">
-            <h4 class="text-center">Ver Todas las Notas</h4>
-            <a href="#" class="boton-card d-flex justify-content-center w-">Ir a Notas</a>
+        <div class="card-small h-100">
+          <img src="asset/home-user/calificar.png"  />
+          <div class="contenedor-accion">
+            <span>Consulta y modifica las notas de los estudiantes.</span>
+            <a href="#" class="boton-card ">Gestión de Notas</a>
 
           </div>
         </div>
@@ -202,22 +211,22 @@
       <!-- Seccion de Tutor -->
 
       <div class="col" id="contenedor-asistencias">
-        <div class="card h-100">
-          <img src="asset/home-user/asistencia.jpg" class="img-fluid mx-auto d-block w-50" />
-          <div class="card-body">
+        <div class="card-small h-100">
+          <img src="asset/home-user/asistencia.png"   />
+          <div class="contenedor-accion">
 
-            <h4 class="text-center">Ver Todas las asistencias</h4>
-            <a href="#" class="boton-card d-flex justify-content-center ">Ir a asistencias</a>
+            <span>Visualiza las asistencias de los estudiantes.</span>
+            <a href="#" class="boton-card ">Asistencias</a>
           </div>
 
         </div>
       </div>
       <div class="col" id="contenedor-materias">
-        <div class="card h-100">
-          <img src="asset/home-user/materias.jpg" class="img-fluid mx-auto d-block w-50" />
-          <div class="card-body">
-            <h4 class="text-center">Ver Todas las materias</h4>
-            <a href="#" class="boton-card d-flex justify-content-center w-">Ir a Materias</a>
+        <div class="card-small h-100">
+          <img src="asset/home-user/materias.png"  />
+          <div class="contenedor-accion">
+           <span>Añade nuevas materias fácilmente.</span>
+            <a href="#" class="boton-card ">Gestión de Materias</a>
             </p>
           </div>
 
@@ -227,16 +236,16 @@
 
 
 
-      <!--    <div class="col" id="contenedor-admRoles">
-          <div class="card h-100">
-            <img src="asset/home-user/Roles.jpg" class="img-fluid mx-auto d-block w-50 h-100" />
-            <div class="card-body">
-              <h4 class="text-center">Administrar Roles </h4>
-              <a href="#" class="boton-card d-flex justify-content-center w-" >Ir a Roles</a>
+       <div class="col" id="contenedor-comunicado">
+          <div class="card-small h-100">
+            <img src="asset/home-user/comunicado.png"  />
+            <div class="contenedor-accion">
+             <span>Informa a los padres sobre sanciones y reuniones.</span>
+              <a href="#" class="boton-card " >Notificaciones a Padres</a>
  
             </div>
           </div>
-        </div> -->
+        </div> 
 
 
 
