--- a/notificacion.html
+++ b/notificacion.html
@@ -119,12 +119,12 @@
        </li>
 
       <li>
-        <a href="#">
+        <a href="/user.html">
           <i class='bx bx-user-plus'></i>
           <span class="link_name">Usuarios</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="#">Usuarios</a></li>
+          <li><a class="" href="/user.html">Usuarios</a></li>
          </ul>
       </li>
 
@@ -153,7 +153,7 @@
     
     <!-- Banner -->
     <div class="banner">
-      <h1>Enviar correo electrónico</h1>
+      <h1>Comunicados a Padres</h1>
     </div>
 
     <form>
