--- a/user.html
+++ b/user.html
@@ -43,12 +43,12 @@
          </ul>
       </li>
       <li>
-        <a href="#">
+        <a href="/notificacion.html">
           <i class='bx bx-envelope'></i>
           <span class="link_name">Comunicado</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="#">Comunicado</a></li>
+          <li><a class="" href="/notificacion.html">Comunicado</a></li>
          </ul>
       </li>
 
