--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,8 @@
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="/login/fonts/font.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+ <!-- Favicon -->
+ <link rel="icon" href="/asset/logo-ico.ico" type="image/x-icon">
 </head>
 
 <body>
