--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LandingPage</title>
+  <title>Libreta Virtual</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
@@ -13,6 +13,8 @@
   <link rel="mask-icon" href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
   <link href="/css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="/login/fonts/font.css">
+  <!-- Favicon -->
+  <link rel="icon" href="/asset/logo-ico.ico" type="image/x-icon">
 </head>
 
 <body>
