--- a/login.html
+++ b/login.html
@@ -10,6 +10,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <!-- Favicon -->
+  <link rel="icon" href="/asset/logo-ico.ico" type="image/x-icon">
     <title>Login</title>
 </head>
 
