--- a/user.html
+++ b/user.html
@@ -14,6 +14,8 @@
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="js/tabla.js"></script>
+   <!-- Favicon -->
+   <link rel="icon" href="/asset/logo-ico.ico" type="image/x-icon">
 
 
   <title>Administrador de usuarios</title>
@@ -54,14 +56,14 @@
 
       <li>
         <div class="icon_link">
-         <a href="#">
+         <a href="/añadirCurso.html">
           <i class='bx bxs-graduation'></i>
            <span class="link_name">Cursos</span>
          </a>
          <i class='bx bxs-chevron-down arrow'></i>
         </div>
         <ul class="sub-menu">
-         <li><a class="" href="#">Añadir Curso</a></li>
+         <li><a class="" href="/añadirCurso.html">Añadir Curso</a></li>
          <li><a href="#">Editar Curso</a></li>
 
         </ul>
