--- a/userHome.html
+++ b/userHome.html
@@ -13,6 +13,8 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
   <title>Home</title>
+   <!-- Favicon -->
+   <link rel="icon" href="/asset/logo-ico.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -49,14 +51,14 @@
 
       <li id="btnCursos">
         <div class="icon_link">
-         <a href="#">
+         <a href="/añadirCurso.html">
           <i class='bx bxs-graduation'></i>
            <span class="link_name">Cursos</span>
          </a>
          <i class='bx bxs-chevron-down arrow'></i>
         </div>
         <ul class="sub-menu">
-         <li><a class="" href="#">Añadir Curso</a></li>
+         <li><a class="" href="/añadirCurso.html">Añadir Curso</a></li>
          <li><a href="#">Editar Curso</a></li>
 
         </ul>
