--- a/userHome.html
+++ b/userHome.html
@@ -59,7 +59,7 @@
         </div>
         <ul class="sub-menu">
          <li><a class="" href="/añadirCurso.html">Añadir Curso</a></li>
-         <li><a href="#">Editar Curso</a></li>
+         <li><a href="/gestionCurso.html">Editar Curso</a></li>
 
         </ul>
        </li>
