--- a/gestionCurso.html
+++ b/gestionCurso.html
@@ -190,7 +190,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-<script src="/js/editarCurso.js"></script>
+<script src="/js/gestionarCurso.js"></script>
 
 
 
