gestion de usuario terminado

--- a/gestionMaterias.html
+++ b/gestionMaterias.html
@@ -190,7 +190,7 @@
               <form action="">
                 <div>
                   <label for="">Nombre:</label>
-                  <input type="text" name="año" id="materia-edit">
+                  <input type="text" name="nombreMateria" id="materia-edit">
                   <span class="sug-año">Ejemplo: Matematica, Literatura etc..</span>
                 </div>
                 <!--  <div>
@@ -204,7 +204,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="button" class="btn-guardar" id="btnEditar">Guardar Cambios <i class='bx bx-save'></i>
+            <button type="button" class="btn-guardar" id="btnEditar" >Guardar Cambios <i class='bx bx-save'></i>
             </button>
           </div>
         </div>
@@ -226,6 +226,10 @@
 
             <div class="container-form">
               <form action="">
+                <div>
+                  <label for="">Nombre:</label>
+                  <input type="text" name="nombreMateria" id="materia-add">
+                </div>
                 <div class="contenedor-select">
                   <label for="curso">Cursos:</label>
                   <select name="curso" id="curso">
@@ -241,7 +245,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="button" class="btn-guardar" id="btnEditar">Añadir <i class='bx bx-check'></i></button>
+            <button type="button" class="btn-guardar" id="btnAgregar">Añadir <i class='bx bx-check'></i></button>
           </div>
         </div>
       </div>
