--- a/añadirMateria.html
+++ b/añadirMateria.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/user.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+
   <link rel="stylesheet" href="/css/menuLateral.css">
   <link rel="stylesheet" href="/css/notificacion.css">
   <link rel="stylesheet" href="/css/curso.css">
@@ -162,7 +162,7 @@
     <form action="" class="form-curso">
       <div>
           <label for="">Nombre:</label>
-          <input type="text" name="año" id="">
+          <input type="text" name="nombreMateria" id="agregarMateria">
           <span class="sug-año">Ejemplo: Matematica, Literatura etc..</span>
       </div>
 <!--  <div>
@@ -171,7 +171,7 @@
           <span class="sug-comision">Ejemplo: D,C o 4°,5°</span>
       </div>  -->  
       <div>
-          <button type="submit" class="btn-añadir">Añadir <i class='bx bx-check'></i></button>
+          <button type="submit" class="btn-añadir" onclick="agregarMateria()">Añadir <i class='bx bx-check'></i></button>
       </div>
   </form>
 </div>
@@ -184,11 +184,13 @@
   </footer> 
 
 </body>
+<script src="/js/añadirMateria.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="/js/menuLateral.js"></script>
-<script src="/js/comunicados.js"></script>
+
+
 
 
 
