gestion de cursos avanzado

--- a/añadirCurso.html
+++ b/añadirCurso.html
@@ -162,7 +162,7 @@
     <form action="" class="form-curso">
       <div>
           <label for="">Nombre:</label>
-          <input type="text" name="año" id="">
+          <input type="text" name="año" id="nombreCurso">
           <span class="sug-año">Ejemplo: 1°D, 2°1° , etc ...</span>
       </div>
      <!--  <div>
@@ -171,24 +171,28 @@
           <span class="sug-comision">Ejemplo: D,C o 4°,5°</span>
       </div> -->
       <div>
-          <button type="submit" class="btn-añadir">Añadir <i class='bx bx-check'></i></button>
+          <button type="button" class="btn-añadir" id="btn-añadir">Añadir <i class='bx bx-check'></i></button>
       </div>
   </form>
 </div>
 
+
+
+
   </main>
-  <footer class="footer" id="footer">
+  <footer class="footer" id="footer" style="margin-top: 17%;">
     <div class="container">
       <h6 class="mb-0">@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
     </div>
   </footer> 
 
 </body>
+<script src="/js/añadirCurso.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="/js/menuLateral.js"></script>
-<script src="/js/comunicados.js"></script>
+
 
 
 
