--- a/añadirMateria.html
+++ b/añadirMateria.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="/css/menuLateral.css">
   <link rel="stylesheet" href="/css/notificacion.css">
-  <link rel="stylesheet" href="/css/curso.css">
+  <link rel="stylesheet" href="/css/anadirMateria.css">
    <!-- icons -->
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
@@ -171,13 +171,13 @@
           <span class="sug-comision">Ejemplo: D,C o 4°,5°</span>
       </div>  -->  
       <div>
-          <button type="submit" class="btn-añadir" onclick="agregarMateria()">Añadir <i class='bx bx-check'></i></button>
+          <button type="button" class="btn-enviar" id="btn-enviar">Añadir <i class='bx bx-check'></i></button>
       </div>
   </form>
 </div>
 
   </main>
-  <footer class="footer" id="footer" style="margin-top: 19.7%;">
+  <footer class="footer" id="footer" style="margin-top: 18%;">
     <div class="container">
       <h6 class="mb-0">@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
     </div>
