--- a/gestionCurso.html
+++ b/gestionCurso.html
@@ -174,8 +174,44 @@
     </div>
 
 
+   <!-- MODAL EDITAR -->
+
+   <div class="modal fade modal-lg" id="editarModal" tabindex="-1" aria-labelledby="editarModalLabel"
+   aria-hidden="true" data-bs-keyboard="false" data-bs-backdrop="static">
+   <div class="modal-dialog">
+     <div class="modal-content">
+       <div class="modal-header">
+         <h5 class="modal-title titulo">Editar Curso</h5>
+         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+       </div>
+       <div class="modal-body">
+         <div class="container-form">
+           <form action="">
+            <div>
+              <label for="">Nombre:</label>
+              <input type="text" name="año" id="nombreCurso">
+              <span class="sug-año">Ejemplo: 1°D, 2°1° , etc ...</span>
+          </div>
+             <!--  <div>
+                   <label for="">Comisión/división:</label>
+                   <input type="text" name="comision" id="">
+                   <span class="sug-comision">Ejemplo: D,C o 4°,5°</span>
+               </div>  -->
+
+           </form>
+         </div>
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+         <button type="button" class="btn-guardar" id="btnEditar" >Guardar Cambios <i class='bx bx-save'></i>
+         </button>
+       </div>
+     </div>
+   </div>
+ </div>
+
   </main>
-  <footer class="footer" id="footer">
+  <footer class="footer" id="footer" style="margin-top: 17%;">
     <div class="container">
       <h6 class="mb-0">@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
     </div>
