--- a/notificacion.html
+++ b/notificacion.html
@@ -76,8 +76,9 @@
         <i class='bx bxs-chevron-down arrow'></i>
        </div>
        <ul class="sub-menu">
-        <li><a class="" href="#">Crear Materia</a></li>
-        <li><a href="#">Editar Materia</a></li>
+        <li><a class="" href="/añadirMateria.html">Crear Materia</a></li>
+        <li><a href="/gestionMaterias.html">Editar Materia</a></li>
+        <li><a href="/admMateriaCurso.html">Administrar Materias <br> por Curso</a></li>
         
   <!--       <li><a href="#">materia2</a></li>
         <li><a href="#">materia3</a></li> -->
