--- a/gestionCurso.html
+++ b/gestionCurso.html
@@ -17,7 +17,7 @@
    <link rel="icon" href="/asset/logo-ico.ico" type="image/x-icon">
   
 
-  <title>Añadir Curso</title>
+  <title>Gestion de Curso</title>
 </head>
 
 <body>
@@ -79,6 +79,7 @@
        <ul class="sub-menu">
         <li><a class="" href="/añadirMateria.html">Crear Materia</a></li>
         <li><a href="/gestionMaterias.html">Editar Materia</a></li>
+        <li><a href="/admMateriaCurso.html">Administrar Materias <br> por Curso</a></li>
         
   <!--       <li><a href="#">materia2</a></li>
         <li><a href="#">materia3</a></li> -->
@@ -154,10 +155,11 @@
     
     <!-- Banner -->
     <div class="banner-curso">
-      <h1>Tus Cursos</h1>
+      <h1>Editar de cursos </h1>
     </div>
     <div class="container" style="margin-top: 10px;padding: 5px; ">
         <input type="search" id="buscador" placeholder="    Buscar...">
+        <div class="table-wrapper">
         <table class="table" id="tabla">
             <thead>
                 <tr class="column">
@@ -211,7 +213,7 @@
  </div>
 
   </main>
-  <footer class="footer" id="footer" style="margin-top: 17%;">
+  <footer class="footer" id="footer" >
     <div class="container">
       <h6 class="mb-0">@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
     </div>
