--- a/gestionMaterias.html
+++ b/gestionMaterias.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/userHome.css" />
   <link rel="stylesheet" href="css/user.css" />
   <link rel="stylesheet" href="/css/menuLateral.css">
-  <link rel="stylesheet" href="/css/gestionMarerias.css">
+  <link rel="stylesheet" href="/css/gestionMaterias.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -80,6 +80,7 @@
         <ul class="sub-menu">
           <li><a class="" href="/añadirMateria.html">Crear Materia</a></li>
           <li><a href="/gestionMaterias.html">Editar Materia</a></li>
+          <li><a href="/admMateriaCurso.html">Administrar Materias <br> por Curso</a></li>
 
           <!--       <li><a href="#">materia2</a></li>
         <li><a href="#">materia3</a></li> -->
@@ -159,6 +160,7 @@
     </div>
     <div class="container" style="margin-top: 10px;padding: 5px; ">
       <input type="search" id="buscador" placeholder="    Buscar...">
+      <div class="table-wrapper">
       <table class="table" id="tabla">
         <thead>
           <tr class="column">
@@ -252,7 +254,7 @@
     </div>
 
   </main>
-  <footer class="footer" id="footer" style="margin-top: 23%;">
+  <footer class="footer" id="footer" >
     <div class="container">
       <h6 class="mb-0">@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
     </div>
