--- a/userHome.html
+++ b/userHome.html
@@ -75,6 +75,7 @@
        <ul class="sub-menu">
         <li><a class="" href="/añadirMateria.html">Crear Materia</a></li>
         <li><a href="/gestionMaterias.html">Editar Materia</a></li>
+        <li><a href="/admMateriaCurso.html">Administrar Materias <br> por Curso</a></li>
         
   <!--       <li><a href="#">materia2</a></li>
         <li><a href="#">materia3</a></li> -->
