--- a/añadirCurso.html
+++ b/añadirCurso.html
@@ -37,42 +37,42 @@
 
     <ul class="nav-links">
       <li>
-        <a href="/userHome.html">
+        <a href="userHome.html">
           <i class='bx bx-home'></i>
           <span class="link_name">Inicio</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="/userHome.html">Inicio</a></li>
+          <li><a class="" href="userHome.html">Inicio</a></li>
          </ul>
       </li>
-      <li>
-        <a href="/notificacion.html">
+      <li id="btnComunicados">
+        <a href="notificacion.html">
           <i class='bx bx-envelope'></i>
           <span class="link_name">Comunicado</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="/notificacion.html">Comunicado</a></li>
+          <li><a class="" href="notificacion.html">Comunicado</a></li>
          </ul>
       </li>
 
-      <li>
+      <li id="btnCursos">
         <div class="icon_link">
-         <a href="#">
+         <a href="/añadirCurso.html">
           <i class='bx bxs-graduation'></i>
            <span class="link_name">Cursos</span>
          </a>
          <i class='bx bxs-chevron-down arrow'></i>
         </div>
         <ul class="sub-menu">
-         <li><a class="" href="añadirCurso.html">Añadir Curso</a></li>
-         <li><a href="gestionCurso.html">Editar Curso</a></li>
+         <li><a class="" href="/añadirCurso.html">Añadir Curso</a></li>
+         <li><a href="/gestionCurso.html">Gestión Cursos</a></li>
 
         </ul>
        </li>
 
-      <li>
+      <li id="btnMaterias">
        <div class="icon_link">
-        <a href="#">
+        <a href="/añadirMateria.html">
           <i class='bx bx-book-heart'></i>
           <span class="link_name">Materias</span>
         </a>
@@ -80,15 +80,17 @@
        </div>
        <ul class="sub-menu">
         <li><a class="" href="/añadirMateria.html">Crear Materia</a></li>
-        <li><a href="/gestionMaterias.html">Editar Materia</a></li>
-         <li><a href="/admMateriaCurso.html">Administrar Materias <br> por Curso</a></li>
+        <li><a href="/gestionMaterias.html">Gestión Materias</a></li>
+        <li><a href="/admMateriaCurso.html">Administrar Materias <br> por Curso</a></li>
         
   <!--       <li><a href="#">materia2</a></li>
         <li><a href="#">materia3</a></li> -->
        </ul>
       </li>
 
-      <li>
+ 
+
+      <li id="btnEstudiantes">
         <div class="icon_link">
          <a href="#">
           <i class='bx bx-group'></i>
@@ -105,7 +107,7 @@
         </ul>
        </li>
 
-       <li>
+       <li id="btnNotas">
         <div class="icon_link">
          <a href="#">
           <i class='bx bx-edit'></i>
@@ -122,7 +124,24 @@
         </ul> -->
        </li>
 
-      <li>
+       <li id="btnAsistencia">
+        <div class="icon_link">
+         <a href="#">
+          <i class='bx bx-edit-alt'></i>
+           <span class="link_name">Asistencias</span>
+         </a>
+         <i class='bx bxs-chevron-down arrow'></i>
+        </div>
+     <!--    <ul class="sub-menu">
+         <li><a class="" href="#">Agregar Estudiante</a></li>
+         <li><a href="#">Gestionar Estudiantes</a></li>
+         
+         <li><a href="#">materia2</a></li>
+         <li><a href="#">materia3</a></li> 
+        </ul> -->
+       </li>
+
+      <li id="btnUser">
         <a href="/user.html">
           <i class='bx bx-user-plus'></i>
           <span class="link_name">Usuarios</span>
@@ -150,7 +169,6 @@
   </li>
   </ul>
   </div>
-
 
 
   <main>
