--- a/userHome.html
+++ b/userHome.html
@@ -31,12 +31,12 @@
 
     <ul class="nav-links">
       <li>
-        <a href="#">
+        <a href="userHome.html">
           <i class='bx bx-home'></i>
           <span class="link_name">Inicio</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="#">Inicio</a></li>
+          <li><a class="" href="userHome.html">Inicio</a></li>
          </ul>
       </li>
       <li id="btnComunicados">
@@ -59,7 +59,7 @@
         </div>
         <ul class="sub-menu">
          <li><a class="" href="/añadirCurso.html">Añadir Curso</a></li>
-         <li><a href="/gestionCurso.html">Editar Curso</a></li>
+         <li><a href="/gestionCurso.html">Gestión Cursos</a></li>
 
         </ul>
        </li>
@@ -74,7 +74,7 @@
        </div>
        <ul class="sub-menu">
         <li><a class="" href="/añadirMateria.html">Crear Materia</a></li>
-        <li><a href="/gestionMaterias.html">Editar Materia</a></li>
+        <li><a href="/gestionMaterias.html">Gestión Materias</a></li>
         <li><a href="/admMateriaCurso.html">Administrar Materias <br> por Curso</a></li>
         
   <!--       <li><a href="#">materia2</a></li>
