--- a/user.html
+++ b/user.html
@@ -16,8 +16,7 @@
   <script src="js/tabla.js"></script>
    <!-- Favicon -->
    <link rel="icon" href="/asset/logo-ico.ico" type="image/x-icon">
-
-
+  
   <title>Administrador de usuarios</title>
 </head>
 
@@ -36,25 +35,25 @@
 
     <ul class="nav-links">
       <li>
-        <a href="/userHome.html">
+        <a href="userHome.html">
           <i class='bx bx-home'></i>
           <span class="link_name">Inicio</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="/userHome.html">Inicio</a></li>
+          <li><a class="" href="userHome.html">Inicio</a></li>
          </ul>
       </li>
-      <li>
-        <a href="/notificacion.html">
+      <li id="btnComunicados">
+        <a href="notificacion.html">
           <i class='bx bx-envelope'></i>
           <span class="link_name">Comunicado</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="/notificacion.html">Comunicado</a></li>
+          <li><a class="" href="notificacion.html">Comunicado</a></li>
          </ul>
       </li>
 
-      <li>
+      <li id="btnCursos">
         <div class="icon_link">
          <a href="/añadirCurso.html">
           <i class='bx bxs-graduation'></i>
@@ -64,29 +63,32 @@
         </div>
         <ul class="sub-menu">
          <li><a class="" href="/añadirCurso.html">Añadir Curso</a></li>
-         <li><a href="/gestionCurso.html">Editar Curso</a></li>
+         <li><a href="/gestionCurso.html">Gestión Cursos</a></li>
 
         </ul>
        </li>
 
-      <li>
+      <li id="btnMaterias">
        <div class="icon_link">
-        <a href="#">
+        <a href="/añadirMateria.html">
           <i class='bx bx-book-heart'></i>
           <span class="link_name">Materias</span>
         </a>
         <i class='bx bxs-chevron-down arrow'></i>
        </div>
        <ul class="sub-menu">
-        <li><a class="" href="#">Crear Materia</a></li>
-        <li><a href="#">Editar Materia</a></li>
+        <li><a class="" href="/añadirMateria.html">Crear Materia</a></li>
+        <li><a href="/gestionMaterias.html">Gestión Materias</a></li>
+        <li><a href="/admMateriaCurso.html">Administrar Materias <br> por Curso</a></li>
         
   <!--       <li><a href="#">materia2</a></li>
         <li><a href="#">materia3</a></li> -->
        </ul>
       </li>
 
-      <li>
+ 
+
+      <li id="btnEstudiantes">
         <div class="icon_link">
          <a href="#">
           <i class='bx bx-group'></i>
@@ -103,7 +105,7 @@
         </ul>
        </li>
 
-       <li>
+       <li id="btnNotas">
         <div class="icon_link">
          <a href="#">
           <i class='bx bx-edit'></i>
@@ -120,13 +122,30 @@
         </ul> -->
        </li>
 
-      <li>
-        <a href="#">
+       <li id="btnAsistencia">
+        <div class="icon_link">
+         <a href="#">
+          <i class='bx bx-edit-alt'></i>
+           <span class="link_name">Asistencias</span>
+         </a>
+         <i class='bx bxs-chevron-down arrow'></i>
+        </div>
+     <!--    <ul class="sub-menu">
+         <li><a class="" href="#">Agregar Estudiante</a></li>
+         <li><a href="#">Gestionar Estudiantes</a></li>
+         
+         <li><a href="#">materia2</a></li>
+         <li><a href="#">materia3</a></li> 
+        </ul> -->
+       </li>
+
+      <li id="btnUser">
+        <a href="/user.html">
           <i class='bx bx-user-plus'></i>
           <span class="link_name">Usuarios</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="" href="#">Usuarios</a></li>
+          <li><a class="" href="/user.html">Usuarios</a></li>
          </ul>
       </li>
 
@@ -228,7 +247,7 @@
       </div>
     </div>
 
-    <div class="table-container">
+    <div class="table-container" >
       <input type="text" id="buscador" placeholder="Buscar...">
       <table id="tabla">
         <thead>
