gestion estudiante muestra y edita

--- a/añadirEstudiantes.html
+++ b/añadirEstudiantes.html
@@ -222,7 +222,7 @@
     <div>
         <label for="">Tutor:</label>
         <select name="tutor" id="tutor">
-          <option value="">Seleccione el Curso</option>
+          <option value="">Seleccione el tutor</option>
         </select>
       
     </div>
