edito base de datos y cambio conexiones y demas

--- a/gestionEstudiantes.html
+++ b/gestionEstudiantes.html
@@ -186,14 +186,14 @@
               <th scope="col">Apellido</th>
               <th scope="col">DNI</th>
               <th scope="col">Fecha de Nacimiento</th>
-              <th scope="col">Direccion</th>
-              <th scope="col">Localidad</th>
-              <th scope="col">Telefono</th>
               <th scope="col">Tutor</th>
+              <th scope="col">Calle</th>
+              <th scope="col">Numero</th>
+              <th scope="col">Localidad</th>
+              <th scope="col">Provincia</th>
               <th scope="col">Curso</th>
               <th scope="col">Estado</th>
               <th scope="col">Fecha de creación</th>
-              <th scope="col">Fecha de baja</th>
               <th scope="col">Fecha de modificación</th>
               <th scope="col">Usuario</th>
               
@@ -222,41 +222,35 @@
                 <form action="">
                   <div>
                     <label for="">Nombre:</label>
-                    <input type="text" name="nombre" id="nombre" class="noEdit" readonly>
+                    <input type="text" name="nombre" id="nombre"  >
                   </div>
 
                   <div>
                     <label for="">Apellido:</label>
-                    <input type="text" name="apellido" id="apellido" class="noEdit" readonly>
+                    <input type="text" name="apellido" id="apellido"  >
                   </div>
 
                   <div>
                     <label for="">DNI:</label>
-                    <input type="text" name="dni" id="dni" class="noEdit" readonly>
+                    <input type="text" name="dni" id="dni"  >
 
                   </div>
 
                   <div>
                     <label for="">Fecha de nacimiento:</label>
-                    <input type="text" name="fecha_nac" id="fechaNac" class="noEdit" readonly>
+                    <input type="text" name="fecha_nac" id="fechaNac"  >
 
                   </div>
 
                   <div>
                     <label for="">Dirección:</label>
-                    <input type="text" name="direccion" id="direccion">
+                    <input type="text" name="direccion" id="direccion" readonly class="noEdit">
 
                   </div>
 
                   <div>
-                    <label for="">Localidad:</label>
-                    <input type="text" name="localidad" id="localidad">
-
-                  </div>
-
-                  <div>
-                    <label for="">Telefono:</label>
-                    <input type="text" name="telefono" id="telefono">
+                    <label for="">Localidad y Provincia:</label>
+                    <input type="text" name="ciudad" id="ciudad" readonly class="noEdit">
 
                   </div>
 
