--- a/userHome.html
+++ b/userHome.html
@@ -86,15 +86,15 @@
 
       <li id="btnEstudiantes">
         <div class="icon_link">
-         <a href="#">
+         <a href="gestionEstudiantes.html">
           <i class='bx bx-group'></i>
            <span class="link_name">Estudiantes</span>
          </a>
          <i class='bx bxs-chevron-down arrow'></i>
         </div>
         <ul class="sub-menu">
-         <li><a class="" href="#">Agregar Estudiante</a></li>
-         <li><a href="#">Gestionar Estudiantes</a></li>
+         <li><a class="" href="añadirEstudiantes.html">Agregar Estudiante</a></li>
+         <li><a href="gestionEstudiantes.html">Gestionar Estudiantes</a></li>
          
    <!--       <li><a href="#">materia2</a></li>
          <li><a href="#">materia3</a></li> -->
