--- a/user.html
+++ b/user.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/user.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+
   <link rel="stylesheet" href="/css/menuLateral.css">
    <!-- icons -->
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -257,7 +257,7 @@
             <th>Apellido</th>
             <th>Nombre</th>
             <th>Email</th>
-            <th></th> 
+            <th>Telefono</th> 
             <th>Fecha Alta</th>
             <th>Fecha Baja</th>
             <th>Rol</th>
