--- a/gestionEstudiantes.html
+++ b/gestionEstudiantes.html
@@ -200,7 +200,7 @@
               <th scope="col">Acciones</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="tbody">
           </tbody>
         </table>
         <div id="paginador"></div>
