--- a/gestionCalificaciones.html
+++ b/gestionCalificaciones.html
@@ -166,10 +166,10 @@
 
         <!-- Banner -->
         <div class="banner-curso">
-            <h1>Gestión estudiante </h1>
+            <h1>Gestión de calificaciones</h1>
         </div>
         <div style="margin-top: 10px;padding: 5px; ">
-            <input type="search" id="buscador" placeholder="    Buscar...">
+            <input type="search" id="buscador" placeholder="    Buscar por nombre de alumno...">
             <div >
                 <table class="table" id="tabla">
                     <thead>
@@ -196,28 +196,16 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title titulo">Editar </h5>
+                            <h5 class="modal-title titulo">Editar Calificación</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
 
 
                             <div class="form-container">
-                                <div class="form-group">
-                                    <label for="curso">Curso:</label>
-                                    <select id="curso">
-                                        <option value="">Seleccione un año</option>
-                                    </select>
-                                </div>
+                                
 
-                                <div class="form-group">
-                                    <label for="estudiante">Nombre del Estudiante</label>
-                                    <select id="estudiante">
-                                        <option value="">Seleccione un estudiante</option>
-                                    </select>
-                                </div>
-
-                                <div class="materias">
+                                <div class="materias" id="materias">
                                     <!-- Aquí se cargarán las materias -->
                                 </div>
 
