--- a/userHome.html
+++ b/userHome.html
@@ -121,13 +121,13 @@
          </a>
          <i class='bx bxs-chevron-down arrow'></i>
         </div>
-     <!--    <ul class="sub-menu">
-         <li><a class="" href="#">Agregar Estudiante</a></li>
-         <li><a href="#">Gestionar Estudiantes</a></li>
+        <ul class="sub-menu">
+         <li><a class="" href="/tomarAsistencia.html">Control de Asistencia</a></li>
+         <li><a href="reporteAsistenciasAdmi.html">Reporte de asistencia</a></li>
          
-         <li><a href="#">materia2</a></li>
-         <li><a href="#">materia3</a></li> 
-        </ul> -->
+        <!--  <li><a href="#">materia2</a></li>
+         <li><a href="#">materia3</a></li>  -->
+        </ul> 
        </li>
 
       <li id="btnUser">
